# Peak10-enterprise-automation

./: .codex.live-secrets.ps1  .gitignore  DEPLOYMENT_GUIDE.md  PILLAR2_PRODUCTION_GUIDE.docx  PILLAR2_PRODUCTION_GUIDE.md  Peak 10 Energy — Enterprise Automation Architecture.md  Peak10-Report-Template.dotm  README.md
pillar1-afa-engine/: function_app.py  host.json  openapi.yaml  pyproject.toml
pillar1-afa-engine/afa_engine/: __init__.py  ach_export.py  allocation_engine.py  models.py  serialization.py
pillar1-afa-engine/infra/: main.bicep
pillar1-afa-engine/tests/: test_ach_export.py  test_allocation_engine.py  test_models.py
pillar2-email-intelligence/: function_app.py  host.json  pyproject.toml  requirements.txt
pillar2-email-intelligence/email_intel/: __init__.py  classifier.py  corrections.py  cosmos_client.py  doc_intelligence.py  document_models.py  models.py  naming.py  openai_client.py  serialization.py  triage.py
pillar2-email-intelligence/infra/: main.bicep
pillar2-email-intelligence/tests/: test_classifier.py  test_corrections.py  test_cosmos_client.py  test_doc_intelligence.py  test_naming.py  test_openai_client.py  test_triage.py
pillar3-document-ai/: function_app.py  host.json  openapi.yaml  pyproject.toml
pillar3-document-ai/document_ai/: __init__.py  classifier.py  corrections.py  models.py  naming.py  serialization.py
pillar3-document-ai/infra/: main.bicep
pillar3-document-ai/scripts/: provision_sharepoint.ps1
pillar3-document-ai/tests/: test_classifier.py  test_corrections.py  test_models.py  test_naming.py
pillar4-expense-hub/: function_app.py  pyproject.toml
pillar4-expense-hub/infra/: main.bicep
(+11 files in other folders)
