[project]
name = "peak10-afa-engine"
version = "1.0.0"
description = "Peak 10 Energy — Automated Financial Allocation Engine"
requires-python = ">=3.10"
dependencies = [
    "azure-functions>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
