[project]
name = "peak10-document-ai"
version = "1.0.0"
description = "Peak 10 Energy — Universal Data Governance & Document AI"
requires-python = ">=3.10"
dependencies = [
    "azure-functions>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
