[project]
name = "peak10-expense-hub"
version = "1.0.0"
description = "Peak 10 Energy — Employee Financial & Expense Hub"
requires-python = ">=3.10"
dependencies = ["azure-functions>=1.17.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
